--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,3 @@
 <h2>Welcome!</h2>
-<a href='/login'>Login</a>
+<a href='/login'>Student Login</a><br>
 <a href='/signup'>Signup</a>
-<a href='/logout'>Logout</a>
