--- a/app/views/student/login.erb
+++ b/app/views/student/login.erb
@@ -1,6 +1,11 @@
 <h2>Student Login</h2>
 <form action='/login' method='POST'>
+    <p>
+    <label for='email'>Email</label>
     <input type='email' name='email' placeholder='Email' required>
+    </p>
+    <label for='password'>Password</label>
     <input type='password' name='password' placeholder='Password' required>
-    <input type='submit' value='Sign Up'>    
+    </p>
+    <input type='submit' value='Log in'>    
 </form>
