--- a/app/views/student/signup.erb
+++ b/app/views/student/signup.erb
@@ -1,8 +1,17 @@
 <h2>New Student Signup</h2>
 <form action='/signup' method='POST'>
+    <p>
+    <label for='username'>Username</label>
     <input type='text' name='username' placeholder='Username' required>
+    </p>
+    <p>
+    <label for='email'>Email</label>
     <input type='email' name='email' placeholder='Email' required>
+    </p>
+    <p>
+    <label for='password'>Password</label>
     <input type='password' name='password' placeholder='Password' required>
+    </p>
     <input type='submit' value='Sign Up'>    
 </form>
     
