created student class,class and started student class controller

--- a/app/views/assignment/show.erb
+++ b/app/views/assignment/show.erb
@@ -1,6 +1,6 @@
 <h2><%= @assignment.name%></h2>
 <ul>
-    <li>Class: <%=@assignment.class_name%></li>
+    <li>Class: <a href= "/studentclasses/<%=@student_class.id%>"><%=@assignment.class_name%></li></a>
     <li>Due Date: <%=@assignment.due_date%></li>
 </ul>
 <form action = '/assignments/<%=@assignment.id%>/delete' method = 'POST'>
