added class student class page and class roster page

--- a/app/views/assignment/show.erb
+++ b/app/views/assignment/show.erb
@@ -5,7 +5,7 @@
 </ul>
 <form action = '/assignments/<%=@assignment.id%>/delete' method = 'POST'>
     <input id ="hidden" type ="hidden" name='_method' value='delete'>
-    <input type='submit' value='X'>
+    <input type='submit' value='x'>
 </form>
 <a href="/assignments/<%=@assignment.id%>/edit">Edit</a><br><br>
 <a href='/assignments'>All Assignments</a><br>
