--- a/app/views/assignment/assignments.erb
+++ b/app/views/assignment/assignments.erb
@@ -8,6 +8,7 @@
 </ol><br>
 
 <a href='/assignments/new'>Create a New Assignment</a><br>
+<a href='/studentclasses'>My Class Rosters</a><br>
 <a href='/logout'>Log out</a>
 
 
