added pig photo

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,7 @@
 <title>Assignment Hog</title>
 </head>
 <body>
+<img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRh0Wdzjv0GUMEGoFGgn06d7LbA2vB7iSdhHnEAku6tgIn9e8xx">
 <h1>Assignment Hog</h1>
 <div class='wrapper'>
 <%=yield %>
