finished new messages and single message controls

--- a/app/views/studentclass/classshow.erb
+++ b/app/views/studentclass/classshow.erb
@@ -4,7 +4,7 @@
         <p>
         <%=student.username%> 
         <% if student != current_student %>
-            <a href=''>Message</a>
         <%end%>
         </p>
     <%end%>
+    <a href='/messages/new'>Message a Classmate</a>
