set up basic nav and finished message controller

--- a/app/views/assignment/assignments.erb
+++ b/app/views/assignment/assignments.erb
@@ -9,6 +9,7 @@
 
 <a href='/assignments/new'>Create a New Assignment</a><br>
 <a href='/studentclasses'>My Class Rosters</a><br>
+<a href='/messages'>Messages</a><br>
 <a href='/logout'>Log out</a>
 
 
