--- a/app/views/message/messages.erb
+++ b/app/views/message/messages.erb
@@ -29,6 +29,6 @@
 <%end%>
 <br><br>
 </ul>
-<a href='/assignments'>Home</a><br>
-<a href='/logout'>Log out</a>
+<a class='nav' href='/assignments'>Home</a><br>
+<a class='nav' href='/logout'>Log out</a>
 
