--- a/app/views/message/show.erb
+++ b/app/views/message/show.erb
@@ -10,6 +10,6 @@
     <input id ="hidden" type ="hidden" name='_method' value='delete'>
     <input type='submit' value='Delete'>
 </form>
-<a href='/messages'>Back to all Messages</a><br>
-<a href='/assignments'>Home</a>
+<a class='nav' href='/messages'>Back to all Messages</a><br>
+<a class='nav' href='/assignments'>Home</a>
 
