--- a/app/views/studentclass/classshow.erb
+++ b/app/views/studentclass/classshow.erb
@@ -7,4 +7,4 @@
         <%end%>
         </p>
     <%end%>
-    <a href='/messages/new'>Message a Classmate</a>
+    <a class='nav' href='/messages/new'>Message a Classmate</a>
