--- a/app/views/assignment/show.erb
+++ b/app/views/assignment/show.erb
@@ -5,10 +5,10 @@
 </ul>
 <form action = '/assignments/<%=@assignment.id%>/delete' method = 'POST'>
     <input id ="hidden" type ="hidden" name='_method' value='delete'>
-    <input type='submit' value='x'>
+    <input type='submit' value='Delete'>
 </form>
-<a href="/assignments/<%=@assignment.id%>/edit">Edit</a><br><br>
-<a href='/assignments'>All Assignments</a><br>
-<a href='/logout'>Log out</a>
+<a class='nav' href="/assignments/<%=@assignment.id%>/edit">Edit</a><br>
+<a class='nav' href='/assignments'>All Assignments</a><br>
+<a class='nav' href='/logout'>Log out</a>
 
     
