--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
 <h2>Welcome!</h2>
-<a href='/login'>Student Login</a><br>
-<a href='/signup'>Signup</a>
+<a class='nav' href='/login'>Student Login</a><br>
+<a class='nav' href='/signup'>Signup</a>
