--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,7 @@
 <h2>Welcome!</h2>
-<a class='nav' href='/login'>Student Login</a><br>
-<a class='nav' href='/signup'>Signup</a>
+<header class='second'>
+<ul class='navbar'>
+<li><a class='nav' href='/login'>Login</a></li>
+<li><a class='nav' href='/signup'>Signup</a></li>
+</ul>
+</header>
