--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,13 +5,18 @@
 <title>Assignment Hog</title>
 </head>
 <body>
-<img id='pig' src= "https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRh0Wdzjv0GUMEGoFGgn06d7LbA2vB7iSdhHnEAku6tgIn9e8xx">
+<header>
+<img id='pig' src= "/images/green-piggy-bank-on-calculator-400x267.jpg">
 <h1>Assignment Hog</h1>
+</header>
+
 <div class='wrapper'>
 
 <%=yield %>
 
+<footer class="branding">
+        <small>&copy; 2020 <strong>Assignment Hog</strong></small>
+</footer>
 </div>
 </body>
-
 </html>
