--- a/app/views/message/messages.erb
+++ b/app/views/message/messages.erb
@@ -1,3 +1,12 @@
+<header class='second'>
+<ul class='navbar'>
+<li><a class='nav' href='/assignments'>Home</a></li>
+<li><a class='nav' href='/studentclasses'>My Class Rosters</a></li>
+<li><a class='nav' href='/messages/new'>Message a Classmate</a></li>
+<li><a class='nav' href='/logout'>Log out</a></li>
+</ul>
+</header>
+
 <h2><%=current_student.username%>'s Messages</h2>
 <h3>Sent:</h3>
 <ul>
@@ -29,6 +38,5 @@
 <%end%>
 <br><br>
 </ul>
-<a class='nav' href='/assignments'>Home</a><br>
-<a class='nav' href='/logout'>Log out</a>
+
 
