--- a/app/views/assignment/assignments.erb
+++ b/app/views/assignment/assignments.erb
@@ -1,3 +1,12 @@
+<header class='second'>
+<ul class ='navbar'>
+<li><a class='nav' href='/assignments'>Home</a></li>
+<li><a class='nav' href='/assignments/new'>Create a New Assignment</a></li>
+<li><a class='nav' href='/studentclasses'>My Class Rosters</a></li>
+<li><a class='nav' href='/messages'>Messages</a></li>
+<li><a class='nav' href='/logout'>Log out</a></li>
+</ul>
+</header>
 <h2>Here are your assignments</h2>
 <ul>
 <% @assignments.each do |assignment| %>
@@ -7,10 +16,7 @@
 <%end%>
 </ul><br>
 
-<a class='nav' href='/assignments/new'>Create a New Assignment</a><br>
-<a class='nav' href='/studentclasses'>My Class Rosters</a><br>
-<a class='nav' href='/messages'>Messages</a><br>
-<a class='nav' href='/logout'>Log out</a>
+
 
 
     
