--- a/app/views/message/show.erb
+++ b/app/views/message/show.erb
@@ -1,3 +1,11 @@
+<header class='second'>
+<ul class='navbar'>
+<li><a class='nav' href='/assignments'>Home</a></li>
+<li><a class='nav' href='/messages'>Messages</a></li>
+<li><a class='nav' href='/studentclasses'>Class Rosters</a></li>
+<li><a class='nav' href='/logout'>Log out</a></li>
+</ul>
+</header>
 <% if current_student.id == @message.recipient && !@sender.nil?%> 
     <h2>Message from <%=@sender.username%></h2>
 <% elsif current_student.id == @message.recipient && @sender.nil?%>
@@ -10,6 +18,4 @@
     <input id ="hidden" type ="hidden" name='_method' value='delete'>
     <input type='submit' value='Delete'>
 </form>
-<a class='nav' href='/messages'>Back to all Messages</a><br>
-<a class='nav' href='/assignments'>Home</a>
 
