--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -1,72 +1,155 @@
-body{
-   text-align: center; 
-   background-color: burlywood;
-}
-
-img#pig{ 
-   width: 60%;
-   border-style: solid;
-   border-width: 0px 5px 0px 5px;
-}
-
-h1{
-   font-family: 'Courier New', Courier, monospace;
-   font-size: 250%;
-   position: absolute;
-   left: 30%;
-   top: 0%;
-   z-index: 1;
-}
-
-div.wrapper{
-   margin-left: 19.5%;
-   margin-right: 19.5%;
-   font-family: 'Courier New', Courier, monospace;
-   background-color: darkgreen;
-   color:beige;
-   border-style: solid;
-   border-color: black;
-   border-width: 3px 3px 3px 3px;
-}
-
-div.wrapper .nav{
-   background-color: orange;
-   color: white;
-   padding: 14px 25px;
-   text-align: center;
-   text-decoration: none;
-   display: flex;
-}
-
-div.wrapper a{
-   color: orange;
-}
-div.wrapper a:visted{
-   color:beige;
-}
-
-div.wrapper input[type=text] {
-   width: 100%;
-   padding: 12px 20px;
-   margin: 8px 0;
-   display: inline-block;
-   border: 1px solid #ccc;
-   border-radius: 4px;
-   box-sizing: border-box;
- }
+@media screen {
+   /* --- Reset Styles --- */
+   * {
+     list-style: none;
+     margin: 0;
+     padding: 0;
+   }
  
- input[type=submit] {
-   width: 100%;
-   background-color: #4CAF50;
-   color: white;
-   padding: 14px 20px;
-   margin: 8px 0;
-   border: none;
-   border-radius: 4px;
-   cursor: pointer;
- }
+   html, body{
+      height: 100%;
+      width: 100%;
+   }
+
+   body {
+      background-color: beige;
+      color:beige;
+      font-family: 'Courier New', Courier, monospace;      line-height: 18px;
+   }
+   img#pig{
+      margin-top: 1.75%;
+      
+   }
+   header{
+      margin: 0% 0% 0% 9%; /* 18px / 800px */
+      width: 85%;
+      max-width: 1000px;
+      padding-left: 1%;
+      color: #333
+    }
+   
+    header.second{
+      margin: 0;
+      width: 100%;
+      max-width: 1000px;
+      background-color: orange;
+   }
+
+    ul.navbar{
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+   }
+
+   ul.navbar li{
+      float:left;
+   }
+
+   ul.navbar li a{
+      display: block;
+      text-align: center;
+      padding: 14px 16px;
+   }
+
+   .wrapper {
+      background: darkgreen;
+      -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
+      -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+      box-shadow: 0 0 10px rgba(0,0,0,.3);
+      margin: 16px auto;
+      max-width: 960px;
+      padding: 2.25%; /* 18px / 800px */
+      width: 85%;
+   }
+
+
+
+   h1{
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 36px;
+      line-height: 54px;
+   }
+
+   h2 {
+      border-bottom: 2px solid #ccc;
+      font-size: 24px;
+      line-height: 36px;
+      margin-bottom: 16px;
+    }
+
+   h3 {
+      font-size: 18px;
+      line-height: 36px;
+   }
+
+   p {
+      margin-bottom: 18px;
+    }
+  
+
+
+   div.wrapper .nav{
+      background-color: orange;
+      color: white;
+      padding: 14px 25px;
+      text-align: center;
+      text-decoration: none;
+      display: flex;
+   }
+
+   div.wrapper a{
+      color: orange;
+   }
+   div.wrapper a:visted{
+      color:beige;
+   }
+
+   div.wrapper input[type=text] {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+   }
+   
+   div.wrapper textarea {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      box-sizing: border-box;
+   }
  
- div.wrapper ul {
-    display: inline-block;
-    text-align: justify;
- }
+   input[type=submit] {
+      width: 20%;
+      background-color: #4CAF50;
+      color: white;
+      padding: 5px 15px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+   }
+ 
+   div.wrapper ul {
+      display: inline-block;
+      text-align: justify;
+      font-size: 1.25em;
+   }
+
+   .branding {
+      clear: both;
+    }
+  
+    footer.branding {
+      border-top: 2px solid #ccc;
+      margin-top: 20px;
+      padding-top: 20px;
+    }
+   
+}
