--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -14,7 +14,8 @@
    body {
       background-color: beige;
       color:beige;
-      font-family: 'Courier New', Courier, monospace;      line-height: 18px;
+      font-family: 'Courier New', Courier, monospace;      
+      line-height: 18px;
    }
    img#pig{
       margin-top: 1.75%;
@@ -25,13 +26,14 @@
       width: 85%;
       max-width: 1000px;
       padding-left: 1%;
-      color: #333
+      color: #333;
     }
    
     header.second{
       margin: 0;
       width: 100%;
       max-width: 1000px;
+      padding: 0;
       background-color: orange;
    }
 
@@ -44,6 +46,8 @@
 
    ul.navbar li{
       float:left;
+      border-right: 2px dotted #333;
+      
    }
 
    ul.navbar li a{
@@ -67,7 +71,7 @@
 
    h1{
       font-family: 'Courier New', Courier, monospace;
-      font-size: 36px;
+      font-size: 40px;
       line-height: 54px;
    }
 
@@ -139,7 +143,7 @@
    div.wrapper ul {
       display: inline-block;
       text-align: justify;
-      font-size: 1.25em;
+      font-size: 1.20em;
    }
 
    .branding {
