started creating alerts

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,6 +12,13 @@
 
 <div class='wrapper'>
 
+<%  flash.keys.each do |type| %>
+        <div data-alert class="flash <%= type %> alert-box radius">
+          <%= flash[type] %>
+          <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        </div>
+<% end %>
+
 <%=yield %>
 
 <footer class="branding">
