--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -17,6 +17,29 @@
       font-family: 'Courier New', Courier, monospace;      
       line-height: 18px;
    }
+
+    /* The alert message box */
+   div.wrapper div.alert {
+      padding: 20px;
+      margin-bottom: 15px;
+   }
+ 
+   /* The close button */
+   div.wrapper .alert .closebtn {
+      margin-left: 15px;
+      font-weight: bold;
+      float: right;
+      font-size: 22px;
+      line-height: 20px;
+      cursor: pointer;
+      transition: 0.3s;
+   }
+ 
+   /* When moving the mouse over the close button */
+   .closebtn:hover {
+      color: black;
+   }
+   
    img#pig{
       margin-top: 1.75%;
       
@@ -155,5 +178,6 @@
       margin-top: 20px;
       padding-top: 20px;
     }
+
    
 }
