--- a/app/views/assignment/edit.erb
+++ b/app/views/assignment/edit.erb
@@ -1,4 +1,11 @@
 <h2>Edit Assignment</h2>
+<ul>
+<li><h3><%=@assignment.name%></h3>
+<li>Class: <%=@assignment.class_name%></li>
+<li>Due Date: <%=@assignment.due_date%></li>
+</ul>
+<br><br>
+
 <form action='/assignments' method='POST'>
     <input id ="hidden" type ="hidden" name='_methood' value='patch'>
     <p>
