--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -63,14 +63,12 @@
     ul.navbar{
       list-style-type: none;
       margin: 0;
-      padding: 0;
       overflow: hidden;
    }
 
    ul.navbar li{
       float:left;
-      border-right: 2px dotted #333;
-      
+      /* border-right: 2px dotted #333;    */
    }
 
    ul.navbar li a{
@@ -86,7 +84,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,.3);
       margin: 16px auto;
       max-width: 960px;
-      padding: 2.25%; /* 18px / 800px */
+      padding: 2.25%;
       width: 85%;
    }
 
@@ -118,6 +116,7 @@
       padding: 14px 25px;
       text-align: center;
       text-decoration: none;
+      font-size: 1em;
       display: flex;
    }
 
@@ -162,7 +161,6 @@
    div.wrapper ul {
       display: inline-block;
       text-align: justify;
-      font-size: 1.20em;
    }
 
    .branding {
@@ -177,3 +175,24 @@
 
    
 }
+
+@media screen and (max-width: 600px) {
+   
+   .wrapper {
+     -moz-box-shadow: none;
+     -webkit-box-shadow: none;
+     box-shadow: none;
+     width: auto;
+     height: auto;
+   }
+ 
+   h1 {
+     font-size: 24px;
+     line-height: 36px;
+   }
+ 
+   h2 {
+     font-size: 18px;
+     line-height: 24px;
+   }
+ }
