--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <h2>Welcome!</h2>
-<header class='second'>
+<header class='third'>
 <ul class='navbar'>
 <li><a class='nav' href='/login'>Login</a></li>
 <li><a class='nav' href='/signup'>Signup</a></li>
