--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -42,14 +42,17 @@
    
    img#pig{
       margin-top: 1.75%;
-      
+      border: 5px solid darkgreen;
+      -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
+      -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+      box-shadow: 0 0 10px rgba(0,0,0,.3);
    }
    header{
       margin: 0% 0% 0% 9%; /* 18px / 800px */
       width: 85%;
       max-width: 1000px;
-      padding-left: 1%;
       color: #333;
+      text-align: center;
     }
    
     header.second{
@@ -59,6 +62,15 @@
       padding: 0;
       background-color: orange;
    }
+   header.third{
+      margin:0;
+      width:100%;
+      max-width: 1000px;
+      padding:0;
+      text-align: justify;
+      background-color: orange;
+   }
+
 
     ul.navbar{
       list-style-type: none;
@@ -68,7 +80,6 @@
 
    ul.navbar li{
       float:left;
-      /* border-right: 2px dotted #333;    */
    }
 
    ul.navbar li a{
