--- a/app/views/assignment/show.erb
+++ b/app/views/assignment/show.erb
@@ -8,7 +8,7 @@
 </ul>
 </header>
 <h2><%= @assignment.name%></h2>
-<ul>
+<ul class = 'list'>
     <li>Class: <a href= "/studentclasses/<%=@student_class.id%>"><%=@student_class.name%></li></a>
     <li>Due Date: <%=@assignment.due_date%></li>
 </ul>
