--- a/public/css/StyleSheet.css
+++ b/public/css/StyleSheet.css
@@ -17,7 +17,10 @@
       font-family: 'Courier New', Courier, monospace;      
       line-height: 18px;
    }
-
+   div.wrapper ul.list li {
+      padding-top: 5%;
+      padding-bottom: 5%;
+   }
     /* The alert message box */
    div.wrapper div.alert {
       padding: 20px;
